k8s-tests/chainsaw/deployment-policy/multi-compartment/assert-complete.yaml
# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: nodewright.nvidia.com/v1alpha1
kind: NodeWright
metadata:
  name: multi-compartment-test
status:
  status: complete
  compartmentStatuses:
    critical:
      completed: 5
      inProgress: 0
      progressPercent: 100
    standard:
      completed: 6
      inProgress: 0
      progressPercent: 100
    test:
      completed: 4
      inProgress: 0
      progressPercent: 100
